@@ -1,4 +1,7 @@
 
+2009-03-22 23:09 Ali aliov@xfce.org 
+	 * : Support cookies in the inhibit interface
+
 2009-03-22 20:45 Ali aliov@xfce.org 
 	 * : Correct the tooltips of the inhibit plugin
 
